--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crossterm = "0.28"
 
 # Data serialization
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.8"
 
 # Utilities
