准备发布到 crates.io v0.2.0
- 添加完整的 Cargo.toml 元数据
- 添加 MIT 和 Apache-2.0 双许可证
- 更新 README 包含安装和使用说明
- 添加首次运行欢迎对话框
- 实现配置管理系统
- 完善 Helix 风格键位绑定

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,15 @@ repository = "https://github.com/menzil/helix-kanban"
 license = "MIT OR Apache-2.0"
 keywords = ["kanban", "todo", "tui", "terminal", "productivity"]
 categories = ["command-line-utilities"]
+exclude = [
+    ".kanban/",
+    "*.md",
+    "!README.md",
+    "*.pdf",
+    "*.sh",
+    "*.bak",
+    "src/ui/board.rs",
+]
 
 [dependencies]
 # TUI framework
