使用 hxk 作为二进制名称（类似 helix 的 hx）

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ exclude = [
     "src/ui/board.rs",
 ]
 
+[[bin]]
+name = "hxk"
+path = "src/main.rs"
+
 [dependencies]
 # TUI framework
 ratatui = "0.28"
