feat: 集成 tui-textarea 并实现 Helix 风格的模态编辑
- 添加 tui-textarea 0.7.0 依赖
- 降级 ratatui 到 0.29.0 以匹配 tui-textarea 版本
- 创建 HelixTextArea 包装器，支持 Insert/Normal/Command 三种模式
- 实现完整的 Helix 快捷键映射（h/j/k/l, i/a/o/O, dd/yy/gg, :w/:q 等）
- 更新所有输入对话框使用新的 TextArea 组件
- Esc 键切换模式而非关闭对话框
- Ctrl+S 或 :w 提交，Ctrl+C 或 :q 取消
- 所有输入框显示行号和模式指示器
- 修复 Backend::Error 类型不兼容问题

变更文件：
- Cargo.toml: 更新依赖版本
- src/ui/text_input.rs: 新增 HelixTextArea 模块
- src/ui/dialogs.rs: 更新 DialogType::Input 结构
- src/input/keyboard.rs: 更新对话框按键处理
- src/main.rs: 移除 Backend::Error 约束
- src/ui/mod.rs: 导出 text_input 模块

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,9 @@ clipboard = ["arboard"]
 
 [dependencies]
 # TUI framework
-ratatui = "0.30.0"
+ratatui = "0.29.0"
 crossterm = "0.29"
+tui-textarea = "0.7.0"  # Text editor widget with Helix-style keybindings
 
 # Data serialization
 serde = { version = "1.0", features = ["derive"] }
